2019-11-05  Martin Sebor  <msebor@redhat.com>

	PR tree-optimization/92373
	* gcc.dg/Warray-bounds-55.c: New test.
	* gcc.dg/Wzero-length-array-bounds-2.c: New test.

2019-11-05  Jim Wilson  <jimw@sifive.com>

	PR middle-end/92263
	* gcc.dg/pr92263.c: New.

2019-11-05  Martin Sebor  <msebor@redhat.com>

	PR middle-end/92333
	PR middle-end/82608
	* gcc.dg/Warray-bounds-51.c: New test.

2019-11-05  Nathan Sidwell  <nathan@acm.org>

	PR c++/92370
	* g++.dg/pr92370.C: New.

2019-11-04  Martin Sebor  <msebor@redhat.com>

	PR middle-end/92341
	PR middle-end/82612
	* g++.dg/warn/Warray-bounds-4.C: Adjust text of expected warning.
	* gcc.dg/Warray-bounds-53.c: New test.
	* gcc.dg/Warray-bounds-54.c: New test.

2019-11-05  Richard Biener  <rguenther@suse.de>

	PR tree-optimization/92371
	* gcc.dg/torture/pr92371.c: New testcase.

2019-11-05  Martin Liska  <mliska@suse.cz>

	* c-c++-common/ubsan/ptr-overflow-2.c: Update based on changed
	run-time reporting format.

2019-11-05  Andreas Krebbel  <krebbel@linux.ibm.com>

	* gcc.dg/tree-ssa/gen-vect-26.c: Disable loop peeling check for
	IBM Z.
	* gcc.dg/tree-ssa/gen-vect-28.c: Likewise.

2019-11-05  Andreas Krebbel  <krebbel@linux.ibm.com>

	* gcc.dg/tree-ssa/gen-vect-11.c: Add --param min-vect-loop-bound=0
	for IBM Z.
	* gcc.dg/tree-ssa/gen-vect-11.c: Likewise.

2019-11-05  Andreas Krebbel  <krebbel@linux.ibm.com>

	* gcc.target/s390/s390.exp
	(check_effective_target_s390_useable_hw): Add inline asm for z14
	and z15. Replace instruction for z13 with lochiz. Add register
	clobbers. Check also for __zarch__ when doing the __VX__ test.

2019-11-05  Christophe Lyon  <christophe.lyon@linaro.org>

	* gcc.target/arm/attr-crypto.c: Skip if -mpure-code is used.
	* gcc.target/arm/attr-neon-fp16.c: Likewise.
	* gcc.target/arm/combine-cmp-shift.c: Likewise.
	* gcc.target/arm/data-rel-1.c: Likewise.
	* gcc.target/arm/data-rel-2.c: Likewise.
	* gcc.target/arm/data-rel-3.c: Likewise.
	* gcc.target/arm/ftest-armv7a-arm.c: Likewise.