@@ -1,3 +1,11 @@
+2019-11-06  Xiong Hu Luo  <luoxhu@linux.ibm.com>
+
+	PR92090
+	* gcc.target/powerpc/pr72804.c: Add -fno-inline-functions --param
+	max-inline-insns-single-O2=200.
+	* gcc.target/powerpc/pr79439-1.c: Add -fno-inline-functions.
+	* gcc.target/powerpc/vsx-builtin-7.c: Likewise.
+
 2019-11-05  Martin Sebor  <msebor@redhat.com>
 
 	PR tree-optimization/92373
